<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.billy.meow.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/vertical_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/vertical_margin" />

        <TextView
            android:id="@+id/tv_add_food_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_food"
            android:textSize="@dimen/text_heading1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/top_guideline" />

        <TextView
            android:id="@+id/header_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_double"
            android:text="@string/header_dish"
            app:layout_constraintStart_toStartOf="@id/et_dish_name"
            app:layout_constraintTop_toBottomOf="@id/tv_add_food_header" />

        <EditText
            android:id="@+id/et_dish_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name2"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/header_dish" />


        <TextView
            android:id="@+id/header_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/header_price"
            app:layout_constraintStart_toStartOf="@id/et_price"
            app:layout_constraintTop_toBottomOf="@id/et_dish_name" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/header_price" />

        <TextView
            android:id="@+id/header_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/header_tax"
            app:layout_constraintStart_toStartOf="@id/et_tax"
            app:layout_constraintTop_toBottomOf="@id/et_price" />

        <EditText
            android:id="@+id/et_tax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:hint="@string/hint_tax"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@id/et_discount"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/header_tax" />

        <TextView
            android:id="@+id/header_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/header_discount"
            app:layout_constraintStart_toStartOf="@id/et_discount"
            app:layout_constraintTop_toBottomOf="@id/et_price" />

        <EditText
            android:id="@+id/et_discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:hint="@string/hint_discount"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/et_tax"
            app:layout_constraintTop_toTopOf="@id/et_tax" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_tax_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="et_tax,et_discount" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_discount_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/discount_before_taxes"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/barrier_tax_discount" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/billee_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_discount_type" />

        <Button
            android:id="@+id/button_add_billee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_double"
            android:text="@string/text_button_add_billee"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/billee_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>